Добавлена аутентификация и авторизация

--- a/CourseWork/appsettings.json
+++ b/CourseWork/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DbConnectionString": "Server=db;Database=Workers;User Id=admin;Password=admin;"
+  },
+  "AuthSettings": {
+    "SecretKey": "courseWorkSecretKeyForUsingSha256Algorythm",
+    "Expires": "00:10:00"
   }
 }
